fix: support chain and network for tx path
